--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="#" type="image/x-icon">
   <title>Document</title>
 </head>
 
-<body>
+<body style="background-color: white;">
   <!-- 这是容器 -->
   <div id="app"></div>
 </body>
